
package edu.hitsz.aircraft;


public interface EnemyFactory {
    AbstractEnemyAircraft createEnemy();
}
